<resources>
    <string name="app_name">GogoZoo</string>
    <string name="home">MAP</string>
    <string name="list">LIST</string>
    <string name="schedule">SCHEDULE</string>
    <string name="person">PERSON</string>

    <style name="LoginDialog">
        <item name="android:windowBackground">@color/translucent_40</item>
    </style>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="base_url">https://maps.googleapis.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="internet_not_connected">您尚未連接 Internet</string>
    <string name="you_know_nothing">You know nothing</string>

    <string name="area_detail">鳥園區包括鳥類形態區、雉類與珍禽區、鶴園、鸚鵡房、生態鳥園及水禽區，可以觀察到住在不同棲息地的鳥類，是都會環境中難得的賞鳥據點。歡迎放慢腳步，聽聽悅耳鳥鳴、看看羽色繽紛的輕盈身影，感受另一個廣闊而自由的世界。</string>

    <string name="animal_inter">赫曼氏陸龜 Hermann’s tortoise\n．特徵：體型小型，背甲高聳呈圓拱形，有兩個尾上盾片，後腳無棘刺突起，尾巴末端有一大型角質鱗片。背甲為黃褐色或深褐色，每一盾板上都有黑色的斑紋，腹甲為暗褐色或黑色，邊緣和中線為黃色。\nCharacteristics: It is a small tortoise with a high-domed carapace that is arched and rounded. It does not have any spurs projecting from the thighs, but does have two bony plates on the tail, and a large patch of horny scutes at the tip of the tail. The carapace is yellowish brown or dark brown in color. There are black markings on every scute. The plastron is dark brown or black, with both the rim and central seam yellow. \n．分布：歐洲南部，西起西班牙東北部和法國，東到土耳其。生活在丘陵的乾燥草原、灌叢、沙丘、岩石山坡地和海岸附近稀疏的樹林中。\nDistribution: It is native to the South Europe, ranging from as west as the Northeastern part of Spain and France, and as east as Turkey. It occurs to dry hilly grasslands, scrubs, sand dunes, and rocky slopes, and sparsely populated woodlands close to the coast.  \n</string>

    <string name="blank"></string>

    <string name="list_title">List</string>
    <string name="home_title">gogoZoo</string>
    <string name="schedule_title">Route</string>

    <string name="fab_friend">同伴位置</string>
    <string name="fab_route">路線清單</string>
    <string name="fab_clear">還原地圖</string>
    <string name="fab_add_friend">新增同伴</string>

    <string name="signin_google">使用 Google 帳戶繼續</string>

    <string name="title_count">計步器</string>
    <string name="title_record">紀錄</string>
    <string name="notification_walking">gogoZoo 計步器</string>
    <string name="notification_text">來看看自己走了多少步吧...</string>
    <string name="welcome">歡迎來到 gogoZoo</string>
    <string name="text_all">ALL</string>
    <string name="text_arrive">恭喜抵達目的地</string>
    <string name="add_new_route">新增路線</string>
    <string name="select_route">請選擇路線</string>
    <string name="select_companion">選擇協作夥伴</string>
    <string name="sure">確定</string>
    <string name="add_to_route">加入路線</string>
    <string name="panda_place">新光特展館（大貓熊館）</string>
    <string name="pangolin_place">熱帶雨林室內館（穿山甲館）</string>
    <string name="text_cant_add_yourself">不能和自己成為同伴</string>
    <string name="send_qr_code">Send QR Code via</string>
    <string name="animal_search">動物...</string>
    <string name="zero_time_count">00 : 00</string>
    <string name="zero_km">0.000</string>
    <string name="gogozoo">gogoZoo</string>
    <string name="sample_date">2020-07-19</string>
    <string name="mark_title">Mark Title</string>
    <string name="start_navigation">開始導航</string>
    <string name="see_info">查看資訊</string>
    <string name="scan_plate">掃描名牌</string>
    <string name="email_or_qr">Email 或 QR Code</string>
    <string name="add_friend">加入同伴</string>
    <string name="search_animals">搜尋動物及場區</string>
    <string name="open_web_hint">即將開啟外部連結</string>
    <string name="cancel">取消</string>
    <string name="text_km">公里</string>
    <string name="zero">0</string>
    <string name="step">步</string>
    <string name="zero_cal">0.00</string>
    <string name="kcal">大卡</string>
    <string name="restart">重新開始</string>
    <string name="end">結束</string>
    <string name="no_record">暫無紀錄</string>
    <string name="myemail">s00001sam@gmail.com</string>
    <string name="return_now_place">返回目前位置</string>
    <string name="clear">CLEAR</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="total200m">路線長度: 200m</string>
    <string name="need_walk_10min">步行所需 10 分鐘</string>
    <string name="click_map_or_search">點擊地圖動物或搜尋加入路線</string>
    <string name="with_me_become_friend">和 s00001sam@gmail.com 成為朋友嗎</string>
    <string name="m20">20m</string>
    <string name="go">Go</string>
    <string name="please_enter_route_name">請輸入行程名稱</string>
    <string name="no_friend_yet">尚無同伴</string>
    <string name="scan_error">掃描失敗</string>
    <string name="cant_find_user">找不到使用者，請重新掃描</string>
    <string name="cant_get_new_location">無法取得最新位置, 請打開定位!!</string>
    <string name="search_introduction">搜尋功能 :\n 快速通過關鍵字找到相關動物</string>
    <string name="welcome_introduction">歡迎您來到 gogoZoo\n先為您介紹一下基本介面</string>
    <string name="fac_introduction">設施快捷按鈕 :\n快速找尋最近之服務設施</string>
    <string name="open_introduction">圖示開關 :\n選擇是否於地圖顯示動物圖式</string>
    <string name="step_introduction">計步器 :\n紀錄步數,可點擊看詳情或拖動按鈕</string>
    <string name="float_introduction">觀看擁有路線 及 好友位置\n清理地圖 可清空至原始地圖畫面</string>
    <string name="location_introduction">定位按鈕 : 點擊前往自己位置\n再點擊回到動物園</string>
    <string name="welcome_again__introduction">再次歡迎您來到 gogoZoo\n祝您旅途愉快</string>
    <string name="not_in_zoo">目前不在動物園範圍內</string>
    <string name="panda_place2">新光特展館(大貓熊館)</string>
    <string name="pangolin_place2">熱帶雨林室內館(穿山甲館)</string>
    <string name="enable_your_location">Please enble your location service</string>
    <string name="more_animals">更多動物</string>

</resources>
