<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sam.gogozoo.stepcount.item.CountViewModel" />
        <variable
            name="main"
            type="com.sam.gogozoo.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".stepcount.item.CountFragment">


        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/frame_count_km"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textKm"
            style="@style/TextStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_km"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3" />

        <TextView
            android:id="@+id/textKmNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_km"
            android:textColor="@color/dark_blue"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <TextView
            android:id="@+id/textTimeCount"
            style="@style/TextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/zero_time_count"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <View
            android:id="@+id/view4"
            android:layout_width="2dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTimeCount" />

        <TextView
            android:id="@+id/textStepNum"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/zero"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/view4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/step"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textStepNum"
            app:layout_constraintStart_toStartOf="@+id/textStepNum"
            app:layout_constraintTop_toBottomOf="@+id/textStepNum" />

        <TextView
            android:id="@+id/textCalNum"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/zero_cal"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4" />

        <TextView
            android:id="@+id/textView12"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/kcal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textCalNum"
            app:layout_constraintStart_toStartOf="@+id/textCalNum"
            app:layout_constraintTop_toBottomOf="@+id/textCalNum" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/frame_info_buttonl"
            android:padding="8dp"
            android:text="@string/restart"
            android:visibility="@{viewModel.showStop == true ? View.GONE : View.VISIBLE }"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonStop"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/frame_info_buttonl"
            android:padding="8dp"
            android:text="@string/end"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="@{viewModel.showStop == true ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonRestart"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <ImageButton
            android:id="@+id/imageClock"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/textTimeCount"
            app:layout_constraintEnd_toStartOf="@+id/textTimeCount"
            app:layout_constraintTop_toTopOf="@+id/textTimeCount"
            app:srcCompat="@drawable/icon_clock" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>