<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sam.gogozoo.plate.PlateDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> viewModel.leave()}"
        tools:context="com.sam.gogozoo.plate.PlateDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/plateDialog"
            android:layout_width="320dp"
            android:layout_height="450dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/frame_plate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> viewModel.nothing()}">


            <ImageView
                android:id="@+id/imageQR"
                android:layout_width="300dp"
                android:layout_height="250dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonCamera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/scan_plate"
                    android:textColor="@color/camera_blue"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageCamera"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageCamera"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/buttonShare"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/icon_share"
                app:layout_constraintBottom_toTopOf="@+id/editEmail"
                app:layout_constraintEnd_toEndOf="@+id/imageQR"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/frame_plate"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_or_qr"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                android:textAlignment="center"
                android:textColor="@color/camera_blue"
                app:layout_constraintBottom_toTopOf="@+id/imageQR"
                app:layout_constraintEnd_toStartOf="@+id/buttonEnter"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/buttonEnter"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="4dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/editEmail"
                app:layout_constraintEnd_toEndOf="@+id/imageQR"
                app:layout_constraintTop_toTopOf="@+id/editEmail"
                app:srcCompat="@drawable/icon_enter" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_friend"
                style="@style/TextStyle3"
                android:textStyle="bold"
                android:textColor="@color/camera_blue"
                app:layout_constraintBottom_toTopOf="@+id/editEmail"
                app:layout_constraintEnd_toStartOf="@+id/buttonShare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
