<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sam.gogozoo.introductions.IntroSearchDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> viewModel.leave()}"
        tools:context=".introductions.IntroSearchDialog">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:background="@drawable/icon_comment"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="210dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_sloth" />

        <TextView
            android:id="@+id/textntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_introduction"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <View
            android:id="@+id/viewSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:visibility="@{viewModel.leave == 1 ? View.VISIBLE : View.GONE }"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/buttonSearch2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:visibility="@{viewModel.leave == 1 ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="@+id/viewSearch"
            app:layout_constraintEnd_toEndOf="@+id/viewSearch"
            app:layout_constraintStart_toStartOf="@+id/viewSearch"
            app:layout_constraintTop_toTopOf="@+id/viewSearch"
            app:srcCompat="@drawable/icon_search" />

        <ImageView
            android:id="@+id/imageFac"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/fac_intro"
            android:visibility="@{viewModel.leave == 2 ? View.VISIBLE : View.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view6"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            android:background="@color/white"
            android:visibility="@{viewModel.leave == 3 ? View.VISIBLE : View.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/switchMarkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="20dp"
            android:textSize="12sp"
            android:visibility="@{viewModel.leave == 3 ? View.VISIBLE : View.GONE }"
            app:colorBorder="@color/colorPrimaryDark"
            app:colorOn="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6"
            app:on="true"
            app:textOff="@string/off"
            app:textOn="@string/on" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:background="@color/white"
            android:padding="8dp"
            android:visibility="@{viewModel.leave == 4 ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/buttonSloth"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/transparent"
                android:foreground="@drawable/icon_sloth"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/layoutStepCount"
                app:layout_constraintStart_toStartOf="@+id/layoutStepCount"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="0 步"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSloth"
                tools:text="0 步" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/zero_time_count"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/layoutStepCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textStep"
                tools:text="@string/zero_time_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageFloat"
            android:layout_width="180dp"
            android:layout_height="320dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop"
            android:visibility="@{viewModel.leave == 5 ? View.VISIBLE : View.GONE }"
            android:src="@drawable/float_intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginBottom="50dp"
            android:visibility="@{viewModel.leave == 6 ? View.VISIBLE : View.GONE }"
            android:src="@drawable/location_intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>